// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a view video component 1`] = `
<div
  className="block video align center"
>
  <div
    className="video-inner"
  >
    <div
      className="ui embed video-embed 16:9 foo"
    >
      <img
        alt=""
        aria-hidden={true}
        src="https://img.youtube.com/vi/KqjeO_ekW3g/sddefault.jpg"
      />
      <button
        aria-label="Play video"
        className="video-play-button"
        onClick={[Function]}
      >
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "white",
              "height": "100%",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders a view video component with placeholder 1`] = `
<div
  className="block video align center"
>
  <div
    className="video-inner"
  >
    <div
      className="ui embed video-embed 16:9 foo"
    >
      <img
        alt=""
        aria-hidden={true}
        src="https://github.com/plone/volto/raw/main/logos/volto-colorful.png"
      />
      <button
        aria-label="Play video"
        className="video-play-button"
        onClick={[Function]}
      >
        <svg
          className="icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          onClick={null}
          style={
            Object {
              "fill": "white",
              "height": "100%",
              "width": "auto",
            }
          }
          viewBox=""
          xmlns=""
        />
      </button>
    </div>
  </div>
</div>
`;
